Change paths to logback config files. [1628]
I'm not wild about the new location of the XML files, but it's a start.
You'll probably want to run "ant clean" prior to building.

As of this commit, McV will look for a config file in two places, in
the following order:

1. build.xml's "logback.default.config" variable. Currently defaults to
"/Users/${user.name}/Documents/McIDAS-V". I'll try to work out
something better for Windows and Linux folks. This is the file that
you'd customize to suit your needs.

2. mcidasv.jar/logback.xml. This is the file that specifies the default
logging behavior.

--- a/build.xml
+++ b/build.xml
@@ -75,7 +75,7 @@
     <property name="run.smallheap" value="1024m" />
     <property name="run.largeheap" value="6656m" />
     
-    <property name="logback.default.config" value="edu/wisc/ssec/mcidasv/resources/logback.xml" />
+    <property name="logback.default.config" value="${userpath.dir}/logback.xml" />
     
     <!-- Nightly build properties -->
     <property name="cvs.root" value="${user.name}@cvs.ssec.wisc.edu:/cvsroot" />
@@ -144,6 +144,8 @@
         <include name="edu/**/*.class" />
         <include name="edu/**/resources/**/*" />
         <include name="edu/**/images/**/*" />
+        <include name="logback.xml" />
+        <include name="logback-stdout.xml" />
     </patternset>
     
     <!-- Files to include in local-idv jar -->
@@ -548,7 +550,7 @@
       <sysproperty key="debug.adde.reqs" value="true" />
       <sysproperty key="idv.usetimedriver" value="true" />
       <sysproperty key="debug.localadde.rootdir" value="${addeservers.dir}" />
-      <sysproperty key="logback.configurationFile" value="edu/wisc/ssec/mcidasv/resources/logback-stdout.xml" />
+      <sysproperty key="logback.configurationFile" value="${logback.default.config}" />
 
       <sysproperty key="visad.java3d.textureNpot" value="true" />
       <sysproperty key="visad.java3d.imageByRef" value="true" />
@@ -591,7 +593,7 @@
       <sysproperty key="mcv.userpath" value="/Users/${user.name}/Documents/McIDAS-V"/>
       <sysproperty key="debug.localadde.rootdir" value="${addeservers.dir}" />
       <sysproperty key="debug.adde.reqs" value="true" />
-      <sysproperty key="logback.configurationFile" value="edu/wisc/ssec/mcidasv/resources/logback-stdout.xml" />
+      <sysproperty key="logback.configurationFile" value="${logback.default.config}" />
       <sysproperty key="python.security.respectJavaAccessibility" value="false" />
       <!--<sysproperty key="idv.usetimedriver" value="true" />-->
       <arg value="-forceaqua" />
@@ -867,7 +869,7 @@
             <sysproperty key="debug.adde.reqs" value="true" />
             <sysproperty key="idv.usetimedriver" value="true" />
             <sysproperty key="debug.localadde.rootdir" value="${addeservers.dir}" />
-            <sysproperty key="logback.configurationFile" value="edu/wisc/ssec/mcidasv/resources/logback-stdout.xml" />
+            <sysproperty key="logback.configurationFile" value="${logback.default.config}" />
             <sysproperty key="visad.java3d.textureNpot" value="true" />
             <sysproperty key="visad.java3d.imageByRef" value="true" />
             <sysproperty key="visad.java3d.geometryByRef" value="true" />
