Allow user to set path to log file via cmdline.
Check for whether or not “mcv.logpath” system property was set. If it
was, that’s the path logback will use. If it was not, the new
“UserpathRollingFileAppender” class will force the default log path to
“MCVUSERPATH/mcidasv.log”.

[1689]

--- a/build.xml
+++ b/build.xml
@@ -547,7 +547,8 @@
       <sysproperty key="debug.adde.reqs" value="false" />
       -->
       <sysproperty key="loglevel" value="${run.log.level}" />
-      <sysproperty key="mcv.userpath" value="/Users/${user.name}/Documents/McIDAS-V"/>
+      <sysproperty key="mcv.userpath" value="${userpath.dir}" />
+      <sysproperty key="mcv.logpath" value="${userpath.dir}/mcidasv.log" />
       <sysproperty key="debug.adde.reqs" value="true" />
       <sysproperty key="idv.usetimedriver" value="true" />
       <sysproperty key="debug.localadde.rootdir" value="${addeservers.dir}" />
@@ -591,7 +592,8 @@
       --> 
       <jvmarg value="-XX:+HeapDumpOnOutOfMemoryError" />
       <jvmarg value="-XX:HeapDumpPath=${heap.dir}" />
-      <sysproperty key="mcv.userpath" value="/Users/${user.name}/Documents/McIDAS-V"/>
+      <sysproperty key="mcv.userpath" value="${userpath.dir}" />
+      <sysproperty key="mcv.logpath" value="${userpath.dir}/mcidasv.log" />
       <sysproperty key="debug.localadde.rootdir" value="${addeservers.dir}" />
       <sysproperty key="debug.adde.reqs" value="true" />
       <sysproperty key="logback.configurationFile" value="${logback.default.config}" />
