--- a/build.xml
+++ b/build.xml
@@ -99,7 +99,7 @@
     <property name="javadoc.level" value="private" />
     
     <!-- The CLASSPATH specified within McV's manifest -->
-    <property name="jar.base.classpath" value="sysout-over-slf4j-1.0.2.jar miglayout-core-4.2.jar miglayout-swing-4.2.jar eventbus-1.4.jar logback-core-1.1.10.jar logback-classic-1.1.10.jar log4j-over-slf4j-1.7.5.jar slf4j-api-1.7.5.jar local-idv.jar repositorytds.jar commons-math3-3.2.jar rsyntaxtextarea-2.5.1.jar jul-to-slf4j-1.7.5.jar local-idv.jar visad.jar idv.jar repositorytds.jar mcv_userguide.jar" />
+    <property name="jar.base.classpath" value="sysout-over-slf4j-1.0.2.jar miglayout-core-4.2.jar miglayout-swing-4.2.jar eventbus-1.4.jar logback-core-1.1.1.jar logback-classic-1.1.1.jar log4j-over-slf4j-1.7.6.jar slf4j-api-1.7.6.jar local-idv.jar repositorytds.jar commons-math3-3.2.jar rsyntaxtextarea-2.5.1.jar jul-to-slf4j-1.7.6.jar local-idv.jar visad.jar idv.jar repositorytds.jar mcv_userguide.jar" />
     
     <!-- List of McIDAS-V jars -->
     <fileset id="mcv.libs" dir="${dist.dir}">
@@ -107,15 +107,15 @@
         <include name="miglayout-core-4.2.jar" />
         <include name="miglayout-swing-4.2.jar" />
         <include name="eventbus-1.4.jar" />
-        <include name="logback-core-1.1.0.jar" />
-        <include name="logback-classic-1.1.0.jar" />
-        <include name="log4j-over-slf4j-1.7.5.jar" />
-        <include name="slf4j-api-1.7.5.jar" />
+        <include name="logback-core-1.1.1.jar" />
+        <include name="logback-classic-1.1.1.jar" />
+        <include name="log4j-over-slf4j-1.7.6.jar" />
+        <include name="slf4j-api-1.7.6.jar" />
         <include name="local-idv.jar" />
         <include name="repositorytds.jar" />
         <include name="commons-math3-3.2.jar" />
         <include name="rsyntaxtextarea-2.5.1.jar" />
-        <include name="jul-to-slf4j-1.7.5.jar" />
+        <include name="jul-to-slf4j-1.7.6.jar" />
     </fileset>
     
     <!-- List of IDV jars -->
@@ -388,7 +388,7 @@
             <manifest>
                 <attribute name="Build-By" value="${user.name}" />
                 <attribute name="Build-Date" value="${jar.TODAY} ${jar.TSTAMP}" />
-                <attribute name="Class-Path" value="jython.jar ncIdv.jar eventbus-1.3.jar logback-core-1.1.0.jar logback-classic-1.1.0.jar log4j-over-slf4j-1.6.1.jar slf4j-api-1.6.1.jar commons-math-2.2.jar" />
+                <attribute name="Class-Path" value="sysout-over-slf4j-1.0.2.jar miglayout-core-4.2.jar miglayout-swing-4.2.jar eventbus-1.4.jar logback-core-1.1.1.jar logback-classic-1.1.1.jar log4j-over-slf4j-1.7.6.jar slf4j-api-1.7.6.jar local-idv.jar repositorytds.jar commons-math3-3.2.jar rsyntaxtextarea-2.5.1.jar jul-to-slf4j-1.7.6.jar local-idv.jar visad.jar idv.jar repositorytds.jar mcv_userguide.jar" />
                 <attribute name="Main-Class" value="${jython.class}" />
             </manifest>
         </jar>
@@ -598,7 +598,7 @@
       --> 
       <jvmarg value="-XX:+HeapDumpOnOutOfMemoryError" />
       <jvmarg value="-XX:HeapDumpPath=${heap.dir}" />
-      <!--<sysproperty key="textureWidthMax" value="${visad.texturemax}" />-->
+      <sysproperty key="textureWidthMax" value="${visad.texturemax}" />
       <sysproperty key="mcv.userpath" value="${userpath.dir}" />
       <sysproperty key="mcv.logpath" value="${userpath.dir}/mcidasv.log" />
       <sysproperty key="debug.localadde.rootdir" value="${addeservers.dir}" />
