--- a/build.xml
+++ b/build.xml
@@ -99,7 +99,7 @@
     <property name="javadoc.level" value="private" />
     
     <!-- The CLASSPATH specified within McV's manifest -->
-    <property name="jar.base.classpath" value="sysout-over-slf4j-1.0.2.jar miglayout-core-4.2.jar miglayout-swing-4.2.jar eventbus-1.4.jar logback-core-1.1.1.jar logback-classic-1.1.1.jar log4j-over-slf4j-1.7.6.jar slf4j-api-1.7.6.jar local-idv.jar repositorytds.jar commons-math3-3.2.jar rsyntaxtextarea-2.5.1.jar jul-to-slf4j-1.7.6.jar local-idv.jar visad.jar idv.jar repositorytds.jar mcv_userguide.jar" />
+    <property name="jar.base.classpath" value="sysout-over-slf4j-1.0.2.jar miglayout-core-4.2.jar miglayout-swing-4.2.jar eventbus-1.4.jar logback-core-1.1.1.jar logback-classic-1.1.1.jar log4j-over-slf4j-1.7.6.jar slf4j-api-1.7.6.jar local-idv.jar repositorytds.jar commons-math3-3.2.jar rsyntaxtextarea-2.5.1.jar jul-to-slf4j-1.7.6.jar local-idv.jar visad.jar idv.jar repositorytds.jar mcv_userguide.jar JSatTrak.jar" />
     
     <!-- List of McIDAS-V jars -->
     <fileset id="mcv.libs" dir="${dist.dir}">
@@ -116,6 +116,7 @@
         <include name="commons-math3-3.2.jar" />
         <include name="rsyntaxtextarea-2.5.1.jar" />
         <include name="jul-to-slf4j-1.7.6.jar" />
+        <include name="JSatTrak.jar"/>
     </fileset>
     
     <!-- List of IDV jars -->
