Add swingx-common to dependencies. [1765]

--- a/build.xml
+++ b/build.xml
@@ -101,10 +101,11 @@
     <property name="javadoc.level" value="private" />
     
     <!-- The CLASSPATH specified within McV's manifest -->
-    <property name="jar.base.classpath" value="gluegen-rt.jar gluegen.jar joal.jar jocl.jar jogl-all.jar sysout-over-slf4j-1.0.2.jar miglayout-core-4.2.jar miglayout-swing-4.2.jar eventbus-1.4.jar logback-core-1.1.1.jar logback-classic-1.1.1.jar log4j-over-slf4j-1.7.6.jar slf4j-api-1.7.6.jar local-idv.jar repositorytds.jar commons-math3-3.2.jar rsyntaxtextarea-2.5.1.jar jul-to-slf4j-1.7.6.jar local-idv.jar visad.jar idv.jar repositorytds.jar mcv_userguide.jar JSatTrak.jar" />
+    <property name="jar.base.classpath" value="gluegen-rt.jar gluegen.jar joal.jar jocl.jar jogl-all.jar sysout-over-slf4j-1.0.2.jar miglayout-core-4.2.jar miglayout-swing-4.2.jar eventbus-1.4.jar logback-core-1.1.1.jar logback-classic-1.1.1.jar log4j-over-slf4j-1.7.6.jar slf4j-api-1.7.6.jar local-idv.jar repositorytds.jar commons-math3-3.2.jar rsyntaxtextarea-2.5.1.jar jul-to-slf4j-1.7.6.jar local-idv.jar visad.jar idv.jar repositorytds.jar mcv_userguide.jar JSatTrak.jar swingx-common-1.6.5-1.jar" />
     
     <!-- List of McIDAS-V jars -->
     <fileset id="mcv.libs" dir="${dist.dir}">
+        <include name="swingx-common-1.6.5-1.jar" />
         <include name="sysout-over-slf4j-1.0.2.jar" />
         <include name="miglayout-core-4.2.jar" />
         <include name="miglayout-swing-4.2.jar" />
