Enable time driver functionality. [1791]

--- a/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
+++ b/edu/wisc/ssec/mcidasv/resources/mcidasv.properties
@@ -460,3 +460,8 @@ idv.browser.path=
 idv.jython.editor=
 idv.jython.editor.proplabel=Path to the executable used for jython editing
 idv.jython.editor.propdesc= Use %filename% macro, e.g., '/usr/bin/emacs %filename%'
+
+##Property to use the time driver option
+idv.usetimedriver.proplabel=Use Time Drivers
+idv.usetimedriver.propdesc=If true then displays can be used to select the times for other displays
+idv.usetimedriver=true
